# live-vision-agent

./: .gitignore  README.md  pyproject.toml
docs/: BUILD_SPEC.md  UI_SPEC.md
src/: agent.py  audio_io.py  camera.py  config.py  server.py
src/static/: index.html
