[project]
name = "live-vision-agent"
version = "0.1.0"
description = "Local real-time vision-and-voice agent on the Gemini Live API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
